Add developer team and iphone images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/screen.jpg" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/home_screen.png" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
@@ -51,7 +51,7 @@
 							<p>Select the date you need to be back.
 		          No need to enter an airport, we'll find the closest ones for you.</p>
 						</div>
-						<div><img class="image-details" src="images/screen.jpg" alt="" /></div>
+						<div><img class="image-details" src="images/home_screen.png" alt="" /></div>
 					</section>
 
 					<section class='flex'>
@@ -61,7 +61,7 @@
 			        Along with the weather in each location, so you can choose to your liking.
 			        All flights displayed are roundtrip.</p>
 						</div>
-						<div><img class="image-details" src="images/index.png" alt="" /></div>
+						<div><img class="image-details" src="images/index_screen.png" alt="" /></div>
 					</section>
 
 					<section>
@@ -426,6 +426,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul> -->
+        <div class="github-icons">
+          <div>
+            <p>Maria Belgrader</p>
+            <a href="https://github.com/mbelgrader"><span class="label"><img src="./images/github_logo3.png" alt=""></span></a>
+          </div>
+          <div>
+            <p>Christopher Byrd</p>
+            <a href="https://github.com/chrabyrd"><span class="label"><img src="./images/github_logo3.png" alt=""></span></a></li>
+          </div>
+        </div>
 				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
