--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<header id="header">
 				<div class="content">
 					<h1><a href="#">GetAway</a></h1>
-					<p>Now available on iOS in the App Store</p>
+					<!-- <p>Now available on iOS in the App Store</p> -->
 					<ul class="actions">
 						<li><a href="#" class="button special icon fa-download">Download</a></li>
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
