--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="content">
+				<div class="content flex">
 					<h1><a href="#">GetAway</a></h1>
+					<p class="center">Find the cheapest flights leaving within the next 12 hours to top destinations and the weather in each location.</p>
 					<!-- <p>Now available on iOS in the App Store</p> -->
 					<ul class="actions">
-						<li><a href="#" class="button special icon fa-download">Download</a></li>
+						<!-- <li><a href="#" class="button special icon fa-download">Download</a></li> -->
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><img src="images/home_screen.png" alt="" /></div></div>
+				<div class="image phone"><div class="inner"><img src="images/getaway_gif.gif" alt="" /></div></div>
 			</header>
 
 		<!-- One -->
@@ -46,27 +47,23 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class='flex'>
-						<div class="content">
-							<h3>Easy to Use</h3>
-							<p>Select the date you need to be back.
-		          No need to enter an airport, we'll find the closest ones for you.</p>
-						</div>
+						<h3>Easy to Use</h3>
+						<p>Select the date you need to be back.
+	          No need to enter an airport, we'll find the closest ones for you.</p>
 						<div><img class="image-details" src="images/home_screen.png" alt="" /></div>
 					</section>
 
 					<section class='flex'>
-						<div class="content">
-							<h3>Flights</h3>
-							<p>See a list of the interesting places you can go if you leave in the next 12 hours.
-			        Along with the weather in each location, so you can choose to your liking.
-			        All flights displayed are roundtrip.</p>
-						</div>
-						<div><img class="image-details" src="images/index_screen.png" alt="" /></div>
+						<h3>Flights</h3>
+						<p>See a list of the interesting places you can go if you leave in the next 12 hours.
+		        	Along with the weather in each location, so you can choose to your liking.
+		        	All flights displayed are roundtrip.</p>
+					  <div><img class="image-details" src="images/index_screen.png" alt="" /></div>
 					</section>
 
 					<section>
 						<!-- <div class="image-details"><img src="images/pic03.jpg" alt="" /></div> -->
-						<div class="content center">
+						<div class="flex">
 			        <p>Just click a flight and you will be sent to the Skyscanner booking page</p>
 						</div>
 					</section>
